2008-09-11  David Bateman  <dbateman@free.fr>

	* general/cell2mat.m: Improve the speed.

2008-09-09  John W. Eaton  <jwe@octave.org>

	* time/datestr.m: Convert format and use strftime to do most of
	the actual conversion.

2008-09-08  Tatsuro MATSUOKA  <tmacchant@yahoo.co.jp>

	* plot/plot.m: Doc fix.

2008-09-08  Mark van Rossum  <mvanross@inf.ed.ac.uk>

	* statistics/distributions/binornd.m: Handle zero values of n
	correctly.

2008-09-08  Kai Habel  <kai.habel@gmx.de>

        * plot/contourf.m: Fix case for equal-sized matrices
        of X and Y.

2008-09-02  David Bateman  <dbateman@free.fr>

	* plot/__add_datasource__.m: Fix indexing of varargin.

	* plot/__line__.m: Remove empty clause fof if/then/else test
	* plot/plot3.m: Correctly plot matrices.

2008-08-31  Michael Goffioul  <michael.goffioul@gmail.com>

	* plot/__plt2mm__.m, plot/__plt2mv__.m, plot/__plt2ss__.m,
	plot/__plt2sv__.m, plot/__plt2vm__.m, plot/__plt2vs__.m,
	plot/__plt2vv__.m: Do not call "set" with empty arguments.

2008-08-29  David Bateman  <dbateman@free.fr>

	* plot/__plt2mm__.m, plot/__plt2mv__.m, plot/__plt2ss__.m,
	plot/__plt2sv__.m, plot/__plt2vm__.m, plot/__plt2vs__.m,
	plot/__plt2vv__.m, plot/plot3.m, plot/__area__.m, plot/__bars__.m,
	plot/__quiver__.m, plot/__stem__.m, plot/stairs.m :
	Pass additional prop/val pairs to hggroup rather than underlying
	objects. If a baseline existings specifically associate it with
	the parent of the created hggroup to allow things like "stem(...,
	'parent', hg)" to work correctly.
	* plot/hold.m: If currentaxes if figure doesn't exist, create it.

	* plot/plot3.m: Pass hline to __add_line_series__.
	* plot/__add_datasource__.m: Fix off by one error.

2008-08-28  David Bateman  <dbateman@free.fr>

	* plot/__add_line_series__.m, plot/ishghandle.m, plot/linkprop.m,
	plot/refresh.m, plot/refreshdata.m: New functions
	* Makefile.in (SOURCES): Add them here.
	
	* plot/__area__.m, plot/__bars__.m, plot/__quiver__.m,